templates/kubernetes/examples-k8s-manifest/nginx-rolling-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-rolling
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-container
        image: nginx:latest
        ports:
        - containerPort: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
