templates/kubernetes/examples-k8s-manifest/service-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  labels:
    name: example-service
spec:
  type: ExternalName
  externalName: kartolo.sby.datautama.net.id
  ports:
    - port: 443
