templates/kubernetes/examples-k8s-manifest/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    name: nginx
  ports:
    - port: 8080
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    name: nginx
  ports:
    - port: 8080
      targetPort: 80
